# channel-bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml
.github/workflows/: ci.yaml
crates/request-processors/: Cargo.toml
crates/request-processors/src/: lib.rs
crates/request-processors/src/track/: mod.rs  processor.rs  processor_tests.rs  traits.rs  types.rs  types_tests.rs
crates/request-processors/src/track_proc/: mod.rs  proc.rs  tests.rs  traits.rs  types.rs
crates/search-providers/: Cargo.toml
crates/search-providers/src/: lib.rs
crates/search-providers/src/rutracker/: mod.rs  parser.rs  rutracker.rs  tests.rs  types.rs
crates/search-providers/src/rutracker/fixtures/: search_results.html
src/: config.rs  loop.rs  main.rs  playlist_processor.rs  runner.rs  types.rs  utils.rs
src/http/: health.rs  mod.rs  track_request.rs
src/impls/: mod.rs  track_request_processor.rs
src/services/: metadata_service.rs  mod.rs  openai_service.rs  radio_manager_client.rs  search_provider.rs  torrent_parser.rs  transmission_client.rs
src/services/openai/: mod.rs
src/services/playlist_processor/: mod.rs  processor.rs  traits.rs  types.rs
src/services/storage/: memory.rs
src/services/third_parties/: mod.rs
src/services/third_parties/search_provider/: mod.rs  parser.rs  rutracker.rs
src/services/third_parties/search_provider/fixtures/: index_logged_in.html  index_logged_out.html
src/services/third_parties/search_provider/rutracker/: mod.rs  parser.rs  rutracker.rs
src/services/third_parties/search_provider/rutracker/fixtures/: topic.html
src/services/third_parties/storage/: memory_based_storage.rs  mod.rs
src/services/third_parties/transmission/: mod.rs  transmission_client.rs
src/services/track_fetcher/: mod.rs  track_fetcher.rs  traits.rs  types.rs
src/services/track_request_processor/: dependencies.rs  impls.rs  mod.rs  processor_tests.rs  step_tests.rs  track_request_controller.rs  track_request_processor.rs  traits.rs  types.rs  types_tests.rs
src/storage/: in_memory.rs  mod.rs  on_disk.rs
tests/fixtures/: example.torrent
