[package]
name = "myownradio-channel-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.68" }
tracing = { version = "0.1.37" }
thiserror = { version = "1.0.40" }
actix-rt = "2.8.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.3", features = ["v4"] }
reqwest = { version = "0.11.18", features = ["cookies"] }
