[package]
name = "myownradio-channel-bot"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
search-providers = { version = "0.1.0", path = "crates/search-providers" }
request-processors = { version = "0.1.0", path = "crates/request-processors" }

async-trait = { version = "0.1.68" }
tracing = { version = "0.1.37" }
thiserror = { version = "1.0.40" }
actix-rt = "2.8.0"
actix-web = { version = "4.3.1", features = ["rustls"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.3", features = ["v4"] }
reqwest = { version = "0.11.18", features = ["cookies"] }
scraper = { version = "0.16.0" }
futures-lite = "1.13.0"
envy = "0.4.2"
transmission-rpc = "0.4.1"
base64 = "0.21.2"
async-lock = "2.7.0"
audiotags = "0.4.1"
