[package]
name = "channel-bot"
version = "0.1.0"
edition = "2021"
authors = ["Roman Lakhtadyr <roman.lakhtadyr@gmail.com>"]

[workspace]
members = ["crates/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
search-providers = { version = "0.1.0", path = "crates/search-providers" }

async-trait = { version = "0.1.68" }
tracing = { version = "0.1.37" }
thiserror = { version = "1.0.40" }
actix-rt = "2.8.0"
actix-web = { version = "4.3.1", features = ["rustls"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_bencode = "0.2.3"
serde_bytes = "0.11.9"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
reqwest = { version = "0.11.18", default_features = false, features = ["cookies", "multipart", "stream", "rustls-tls"] }
scraper = { version = "0.16.0" }
futures-lite = "1.13.0"
envy = "0.4.2"
transmission-rpc = "0.4.1"
base64 = "0.21.2"
async-lock = "2.7.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
tokio = "1.28.2"
tokio-util = { version = "0.7.3", features = ["codec"] }
mime_guess = "2.0.4"
