[package]
name = "request-processors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
uuid = { version = "1.3.3", features = ["v4"] }
async-trait = "0.1.68"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tracing = "0.1.37"
