[package]
name = "search-providers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.96"
serde = { version = "1.0.164", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["cookies"] }
scraper = "0.16.0"
thiserror = "1.0.40"
tracing = "0.1.37"
tokio = "1.28.2"
